added task updates, not real-time

--- a/master_agent/ui/static/pages/home.html
+++ b/master_agent/ui/static/pages/home.html
@@ -11,7 +11,7 @@
 				<br>
 				<div class="form-group">
 					<textarea id="tasktext" class="form-control" rows="6" cols="35" name="task"></textarea>
-					<input id="tasksubmit" type="submit" class="btn btn-success" value="Submit Task" /> 
+					<button ng-click="submitTask()" class="btn btn-success">Submit Task</button> 
 				</div>
 			</div>
 		</div>
