--- a/master_agent/ui/static/pages/home.html
+++ b/master_agent/ui/static/pages/home.html
@@ -2,6 +2,8 @@
 	<div class="row panel panel-primary">
 
 		<br>
+		<div id="error" class="alert alert-danger" role="alert" style="display:none">
+		</div>
 
 		<div class="col-lg-4 col-md-4 col-sm-4">
 			<div class="panel panel-primary">
