--- a/master_agent/ui/static/pages/nodes.html
+++ b/master_agent/ui/static/pages/nodes.html
@@ -1,6 +1,5 @@
 <div class="container text-center">
 	<div class="row panel panel-primary">
-
 		<br>
 
 		<div class="col-lg-4 col-md-4 col-sm-4">
@@ -21,7 +20,7 @@
 
 					<div class="form-group">
 						<label for="pinmappings">Sensor-Pin Mappings</label>
-						<textarea class="form-control" id="pinmappings" placeholder="Temperature:1, Humidity:8"></textarea>
+						<textarea class="form-control" id="pinmappings" placeholder="Temperature:D4, Luminosity:A2"></textarea>
 					</div>
 					<button ng-click="registerNode()" class="btn btn-success">Register Node</button> 
 				</form>
@@ -36,9 +35,6 @@
 				<table class="table table-hover " style="cursor:pointer" ng-table="tableParams">
 					<tbody>
 						<tr ng-click="toggle(task.id, task.state)" ng-repeat="node in items">
-							<td data-title="'Node ID'" sortable="'id'">
-								{{node.id}}
-							</td>
 							<td data-title="'Name'" sortable="'name'">
 								{{node.name}}
 							</td>
@@ -56,6 +52,5 @@
 				</table>
 			</div>
 		</div>
-
 	</div>
 </div>
