monitoring latest version

--- a/master_agent/ui/static/pages/monitoring.html
+++ b/master_agent/ui/static/pages/monitoring.html
@@ -7,7 +7,7 @@
 					<h4> Node Information: {{ node.name }}</h4>
 				</div>
 				<br>
-				<h5><a href="{{node.ip}}:8080"> CAdvisor Link</a></h5>
+				<h5><a href="http://{{node.ip}}:8080"> CAdvisor Link</a></h5>
 				<table class="table"> 
 					<tr>
 						<td>State</td> 
